# autonomous-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  graph.py  state.py
app/agents/nodes/: __init__.py  discoverer.py  extractor.py  planner.py  ranker.py  reporter.py  retriever.py  synthesizer.py  verifier.py
app/api/: routes.py  schemas.py
app/memory/: __init__.py  cache.py  checkpointer.py  vector_store.py
app/models/: __init__.py  citation.py  fact.py  report.py  research.py  source.py
app/prompts/: __init__.py  extractor.py  planner.py  reporter.py  synthesizer.py  verifier.py
app/services/: __init__.py  llm_service.py  research_service.py
app/tools/: __init__.py  citation_generator.py  pdf_reader.py  report_writer.py  scraper.py  search.py  search_fallback.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
frontend/: streamlit_app.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_tools.py
